[tool.poetry]
name = "cancel-culture"
version = "0.1.0"
description = ""
authors = ["Dikson Santos <diksonfer@gmail.com>"]
readme = "README.md"
packages = [{include = "cancel_culture"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"
imblearn = "^0.0"
xgboost = "^1.7.5"
nbconvert = "^7.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
